crates/swc/tests/tsc-references/classes/classDeclarations/classAndVariableWithSameName/input.ts/es2015.1.normal/output.js
class C {
} // error
var C = ''; // error
var M;
(function(M) {
    class D {
    }
    var D = 1; // error
})(M || (M = {
}));
